# Car2xDetectionCohda

./: README.md
catkin_ws/src/cameraNode/: CMakeLists.txt  package.xml
catkin_ws/src/cameraNode/include/cameranode/: cameranode.h
catkin_ws/src/cameraNode/launch/: car2xServer.launch
catkin_ws/src/cameraNode/nodes/: cameranode_node.cpp
catkin_ws/src/cameraNode/src/: cameranode.cpp
catkin_ws/src/car2x/: CMakeLists.txt  package.xml
catkin_ws/src/car2x/include/car2x/: CameraInput.h  Input.h
catkin_ws/src/car2x/msg/: parkingStatus.msg
catkin_ws/src/car2x/src/: CameraInput.cpp
catkin_ws/src/denm_client/: CMakeLists.txt  package.xml
catkin_ws/src/denm_client/launch/: denm_client.launch
catkin_ws/src/denm_client/msg/: GeoNetDestination.msg
catkin_ws/src/denm_client/src/: denm_client.cpp  denm_client.h
catkin_ws/src/denm_client/srv/: DenmTx.srv
catkin_ws/src/student-fake_data_rosvanetza/: CMakeLists.txt  package.xml
catkin_ws/src/student-fake_data_rosvanetza/launch/: fake_gps.launch
catkin_ws/src/student-fake_data_rosvanetza/msg/: GeoNetArea.msg  LocalisationStatus.msg  SecurityIdChange.msg  TrafficClass.msg
catkin_ws/src/student-fake_data_rosvanetza/src/: fake_generator.cpp  fake_generator.h
catkin_ws/src/student-ros_etsi_msg/msg/: ItsPduHeader.msg
catkin_ws/src/student-rosvanetza/: CMakeLists.txt  README.md  nodelets.xml  package.xml
catkin_ws/src/student-rosvanetza/config/console/: debug.conf
catkin_ws/src/student-rosvanetza/launch/: basic.launch  ca.launch  cmc-its.launch  test-network.launch  test-node.launch
catkin_ws/src/student-rosvanetza/msg/: BtpDataIndication.msg  LinkLayer.msg  LinkLayerStamped.msg  LocalisationBody.msg  LocalisationEllipsoid.msg  LocalisationGround.msg  LocalisationProjection.msg  LocalisationVehicleInformation.msg  PositionVector.msg
catkin_ws/src/student-rosvanetza/scripts/: denm_sender.py  gbc_trigger.py  gps_mock.py
catkin_ws/src/student-rosvanetza/src/: btp_data_service.cpp  btp_data_service.hpp  btp_publisher.cpp  btp_publisher.hpp  ca_message.cpp  ca_message.hpp  ca_rx_nodelet.cpp  ca_rx_nodelet.hpp  ca_tx_nodelet.cpp  ca_tx_nodelet.hpp  cp_message.cpp  cp_message.hpp  cp_rx_nodelet.cpp  cp_rx_nodelet.hpp  cp_tx_nodelet.cpp  cp_tx_nodelet.hpp  dcc_pass_through.cpp  dcc_pass_through.hpp  den_rx_nodelet.cpp  den_rx_nodelet.hpp  den_tx_nodelet.cpp  den_tx_nodelet.hpp  message_table.cpp  message_table.hpp  multicast_receiver.cpp  multicast_receiver.hpp  position_provider.cpp  position_provider.hpp  protobuf_access_interface.cpp  protobuf_access_interface.hpp  radio_configurator.cpp  radio_configurator.hpp  security_id_publisher.cpp  security_id_publisher.hpp  tai_clock.cpp  tai_clock.hpp  time_trigger.cpp  time_trigger.hpp  vanetza_context.cpp  vanetza_context.hpp  (+3 more)
catkin_ws/src/student-rosvanetza/srv/: BtpData.srv
